fix: fixed a bug where the features were clumped too close together

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body {
   color: var(--main-darkgrey)
 }
 
-header, .main {
+header, .main, .features {
   width: 100%;
   background-color: var(--main-lightgrey);
   overflow: hidden;
@@ -81,6 +81,10 @@ button {
   padding: 1em 1em 1em 1em;
 }
 
+.main {
+  padding: 2em 2em 2em 2em;
+}
+
 .main h1 {
   font-weight: bold;
   font-size: 3em;
@@ -96,6 +100,11 @@ button {
 
 .features {
   text-align: center;
+}
+
+.feature-one, .feature-two, .feature-three, .feature-four {
+  padding: .5em .5em .5em .5em;
+  margin: 1em 1em 1em 1em;
 }
 
 .features a {
